# prometheus-eval

./: .env.example  .gitignore  .gitignore_summary.md  ARCHITECTURE.md  COMMIT_GUIDE.md  COMPLETION_SUMMARY.md  EXPERIMENTAL_RESULTS.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_CHECKLIST.md  HW6_Submission_Lior_Livyatan.docx  HW6_asiroli2025_prompt_engineering.docx  PROJECT_COMPLETE.md  QUICK_START.md  README.md  VIEW_RESULTS.sh  VISUALIZATION_INDEX.md  analyze_coverage.py  coverage_report.txt  create_hw6_submission_docx.py  extract_pdf_text.py  extracted_pdfs.txt  guidelines_text.txt  pyproject.toml  pytest.ini  requirements.txt  run_experiments.py  serve_dashboard.py  setup.py
.claude/agents/: documentation-agent.md  metric-mathematician-agent.md  project-architect-agent.md  project-orchestrator.md  (+7 more)
agent_docs/: Documentation_Agent.md  Project_Architect.md  QA_Agent.md  Research_Agent.md  Security_Agent.md  UX_Agent.md
dashboard/: app.js  index.html  style.css
docs/: AGENT_STATE_UPDATE_TEMPLATE.md  ARCHITECTURE_VALIDATION_WEEK6.md  CLAUDE.md  COMPLETE_100_SCORE_PLAN.md  DOCUMENTATION_VALIDATION_WEEK6.md  ORCHESTRATOR_DECISION_2025-12-14.md  PLAN-LATEST.md  PRD.md  PROJECT_STATUS_ANALYSIS_2025-12-14.md  QA_VALIDATION_WEEK6.md  REFACTORING_GUIDE.md  SECURITY_VALIDATION_WEEK6.md  STATE_MANAGEMENT_GUIDE.md  orchestrator_status_report_2025-12-13.md  phase1_architectural_review.md  phase1_documentation_report.md  phase1_issues_tracker.md  phase1_qa_report.md  phase1_validation_report.md  phase2_week6_architecture_validation.md  phase2_week6_documentation_validation.md  phase2_week6_meteor_dispatch.md  phase2_week6_security_validation.md  week5_validation_checkpoint.md
notebooks/: create_comprehensive_viz.py  create_temperature_viz.py  extract_results.py  generate_plots.py  results_analysis.ipynb
project_state/: DETAILED_EXECUTION_PLAN.md  PROJECT_STATE.json  PROJECT_SUMMARY.md  comprehensive_fix_plan.md  phase2_issues_tracker.md
src/: __init__.py
tests/: conftest.py
(+79 files in other folders)
